More fixes of flex display on IE

--- a/src/main/js/app/app.css
+++ b/src/main/js/app/app.css
@@ -55,25 +55,31 @@
 }
 
 .question-row {
-    width: 100%;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
+    flex: 0 1 auto;
+    flex-basis: 100%;
     align-items: center;
+    width: 100%;
     height: 45px;
 }
 
 .question-row > div {
-    height: 100%;
     display: flex;
+    flex-flow: row wrap;
+    flex: 0 1 auto;
     align-items: center;
+    height: 100%;
 }
 
 .question-row > div:first-child {
+    flex-basis: 60%;
     width: 60%;
     padding-left: 20px;
 }
 
 .question-row > div:not(:first-child) {
+    flex-basis: 20%;
     width: 20%;
     justify-content: center;
 }
@@ -114,11 +120,13 @@
 }
 
 .footer {
-    width: 100%;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
+    flex: 0 1 auto;
+    flex-basis: 100%;
     align-items: center;
     justify-content: center;
+    width: 100%;
     height: 45px;
     margin-top: 25px;
     margin-bottom: 50px;
